<resources>
    <string name="app_name">NewHfuu</string>
    <string name="firstPage">预约挂号</string>
    <string name="consult_other">咨询</string>
    <string name="hospital">医院主页</string>
    <string name="hospital_menzhen">医院名称</string>
    <string name="app_name_account">修改资料</string>
    <string name="app_name_about">关于</string>
    <string name="app_name_recorderHistory">历史挂号记录</string>
    <string name="app_name_recorderNow">我的挂号</string>
    <string name="app_name_manage">就诊人管理</string>
    <string name="signout">退出</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="forget_pwd_other">忘记密码？</string>
    <string name="registered">注册</string>
    <string name="fastReg">快速注册 >  </string>
    <string name="login">登录</string>
    <string name="phoneNum">手机号码</string>
    <string name="title_phone">请输入11位手机号</string>
    <string name="code">验证码</string>
    <string name="title_code">请输入短信验证码</string>
    <string name="setPwd">设置密码</string>
    <string name="pwd">密码</string>
    <string name="title_pwd">请输入新密码</string>
    <string name="putPwd">请输入您的密码</string>
    <string name="Iagree">我同意</string>
    <string name="userAgreement">《某某用户协议》</string>
    <string name="ok">完成</string>
    <string name="consult">医患咨询</string>
    <string name="put_phoneNum">请输入您的手机号</string>
    <string name="title_activity_forget_pwd">ForgetPwdActivity</string>
    <string name="title_activity_registered">RegisteredActivity</string>
    <string name="title_activity_consult">ConsultActivity</string>
    <string name="title_activity_consult_consult">Consult_consult</string>
    <string name="title_activity_recorder_mes">订单详情</string>
    <string name="title_activity_recorder_mes_mes">预约详情</string>
    <string name="title_activity_recoder_note">就诊须知</string>
    <string name="title_activity_attention">我的关注</string>
    <string name="title_Fuke">妇科</string>
    <string name="title_DoctorActivity">医生简介</string>
    <string name="title_SureinfoActivity">确认预约</string>
    <string name="title_activity_register_succ">预约成功</string>
</resources>
